--- a/mode.py/tags/1.0a1/doc/tex/Makefile
+++ b/mode.py/tags/1.0a1/doc/tex/Makefile
@@ -1,6 +1,6 @@
 # Makefile to create documentation using the Python LaTeX system.
 
-VERSION=1.0
+VERSION=1.0a1
 PYTHON_SRC = /home/whit537/python/2.4.3/src
 MKHOWTO    = $(PYTHON_SRC)/Doc/tools/mkhowto \
 				--iconserver icons \
