--- a/httpy/trunk/Makefile
+++ b/httpy/trunk/Makefile
@@ -12,25 +12,28 @@ clean:
 # ==================================
 # note the dependency on svneol: http://www.zetadev.com/svn/public/svneol/
 
-dist: clean
+version:
+    find . -type f -exec sed -E 's/~~VERSION~~//g'
+
+dist: version clean
 	mkdir dist
-	mkdir dist/mode.py-${version}
+	mkdir dist/httpy-${version}
 	cp -r README \
 	      src \
 	      setup.py \
-	      dist/mode.py-${version}
+	      dist/httpy-${version}
 
 	make -C doc/tex all clean
-	mkdir dist/mode.py-${version}/doc
+	mkdir dist/httpy-${version}/doc
 	cp -r doc/html \
-	      doc/mode.py-${version}.pdf \
+	      doc/httpy-${version}.pdf \
 	      doc/HISTORY \
-	      dist/mode.py-${version}/doc
+	      dist/httpy-${version}/doc
 
-	tar --directory dist -zcf dist/mode.py-${version}.tgz mode.py-${version}
-	tar --directory dist -jcf dist/mode.py-${version}.tbz mode.py-${version}
+	tar --directory dist -zcf dist/httpy-${version}.tgz httpy-${version}
+	tar --directory dist -jcf dist/httpy-${version}.tbz httpy-${version}
 
 # ZIP archive gets different line endings
-	svneol clean -w dist/mode.py-${version}
-	cd dist && zip -9rq mode.py-${version}.zip mode.py-${version}
-#	rm -rf dist/mode.py-${version}
+	svneol clean -w dist/httpy-${version}
+	cd dist && zip -9rq httpy-${version}.zip httpy-${version}
+#	rm -rf dist/httpy-${version}
