--- a/httpy/trunk/Makefile
+++ b/httpy/trunk/Makefile
@@ -1,7 +1,7 @@
 # This Makefile is used to create an httpy distribution. Before calling, set the
 # VERSION environment variable.
 
-#VERSION=1.0
+VERSION=1.0-trunk
 
 clean:
 # remove all of the cruft that gets auto-generated on doc/install/release
